gravity board templated and ticket updating working

--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -10,7 +10,7 @@
 
     <!-- Le styles -->
     <link rel="icon" type="image/png" href="/static/images/favicon.png" />
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,200italic,300italic,400italic' rel='stylesheet' type='text/css'>
+{#    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,200italic,300italic,400italic' rel='stylesheet' type='text/css'>#}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/codemirror.css' %}" rel="stylesheet">
     <link href="{% static 'css/jquery.gridly.css' %}" rel="stylesheet">
@@ -120,9 +120,9 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+{#    <script src="http://code.jquery.com/jquery-latest.js"></script>#}
+    <script src="{% static 'js/jquery-latest.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/jquery-sortable.js' %}"></script>
     <script src="{% static 'js/codemirror.js' %}"></script>
     <script src="{% static 'js/underscore.js' %}"></script>
     <script src="{% static 'js/jquery.gridly.js' %}"></script>
@@ -132,14 +132,14 @@
     <script src="{% static 'js/pinch.js' %}"></script>
 
     {% block extra_js %}{% endblock extra_js %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-50612155-1', 'pinch.tn');
-      ga('send', 'pageview');
-    </script>
+{#    <script>#}
+{#      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){#}
+{#      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),#}
+{#      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)#}
+{#      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');#}
+{##}
+{#      ga('create', 'UA-50612155-1', 'pinch.tn');#}
+{#      ga('send', 'pageview');#}
+{#    </script>#}
   </body>
 </html>
