--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -17,7 +17,7 @@
 </button><h4>Make coffee</h4>
   					</div>
   					<ul class="drag_list clearfix">
-  						<li class="ticket">This is my task</li>
+  						<li class="ticket">This is my task<div class="trash"></div></li>
   					</ul>
   				</li>
   				<li>
