--- a/pinch/static/css/sass/_gravity_board.scss
+++ b/pinch/static/css/sass/_gravity_board.scss
@@ -56,6 +56,7 @@
 					white-space:normal;
 					width:100px;
 					height:75px;
+					.trash { background-color:red; cursor:pointer; width:20px; height:20px; }
 				}
 			}
 		}
