--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -35,8 +35,8 @@
 
         <div class="col-md-3">
           <div class="info-panel">
-            <h3>Tips</h3>
-            <p>Some tips around creating a project.</p>
+            <h3>It starts with a name.</h3>
+            <p>After you create your project name, save the URL somewhere for future reference.</p>
           </div>
         </div>
 
