--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block step %}gravity-board{% endblock step %}
   {% block content %}
 
 
@@ -74,14 +74,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Add a new ticket</h4>
       </div>
       <div class="modal-body">
-        <input type="text" placeholder="New Task Item..."/>
+        <input class="ticket-input" type="text" placeholder="New ticket name"/>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary save" data-dismiss="modal">Save changes</button>
+        <button type="button" class="btn btn-primary save" data-dismiss="modal">Add ticket</button>
       </div>
     </div>
   </div>
