--- a/pinch/static/css/sass/_gravity_board.scss
+++ b/pinch/static/css/sass/_gravity_board.scss
@@ -29,11 +29,12 @@
 			margin:0;
 			padding:0 10px;
 			.drag_list {
+				list-style-type:none;
 				padding:0;
 				min-width:100px;
 				min-height:75px;
 			}
-			li {
+			> li {
 				border-left:1px solid $color-border-color;
 				display:table-cell;
 				padding:10px 0;
@@ -88,5 +89,10 @@
 }
 
 .modal-dialog {
-		left:0 !important;
+	left:0 !important;
+	.ticket-input {
+		font-size:21px;
+		padding:10px 5px;
+		width:100%;
 	}
+}
