--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -19,7 +19,7 @@
   					</div>
   					<ul id="{{ workstream.name }}" class="drag_list clearfix">
                         {% for ticket in workstream.ready %}
-  						<li id="{{ ticket.id }}" class="ticket">{{ ticket.content }}<div class="trash"></div></li>
+  						<li id="{{ ticket.id }}" class="ticket"><div class="trash">x</div>{{ ticket.content }}</li>
                         {% endfor %}
   					</ul>
   				</li>
@@ -39,7 +39,7 @@
                         </div>
                         <ul id="{{ workstream.name }}" class="drag_list clearfix">
                             {% for ticket in workstream.doing %}
-                                <li id="{{ ticket.id }}" class="ticket">{{ ticket.content }}<div class="trash"></div></li>
+                                <li id="{{ ticket.id }}" class="ticket"><div class="trash">x</div>{{ ticket.content }}</li>
                             {% endfor %}
                         </ul>
                     </li>
@@ -59,7 +59,7 @@
                         </div>
                         <ul id="{{ workstream.name }}" class="drag_list clearfix">
                             {% for ticket in workstream.done %}
-                                <li id="{{ ticket.id }}" class="ticket">{{ ticket.content }}<div class="trash"></div></li>
+                                <li id="{{ ticket.id }}" class="ticket"><div class="trash">x</div>{{ ticket.content }}</li>
                             {% endfor %}
                         </ul>
                     </li>
