--- a/pinch/static/css/sass/_gravity_board.scss
+++ b/pinch/static/css/sass/_gravity_board.scss
@@ -60,7 +60,13 @@
 					}
 				}
 				.ticket {
+					background:url('/static/images/page-curl.png') no-repeat right bottom;
 					background-color:$color-bg-panel;
+					@include respond-to(retina-display) {
+						background:url('/static/images/page-curl@2x.png') no-repeat bottom right;
+						background-size:13px 12px;
+						background-color:$color-bg-panel;
+					}
 					float:left;
 					line-height:15px;
 					margin:5px;
@@ -76,9 +82,9 @@
 						border-radius:100px;
 						cursor:pointer;
 						display:none;
-						margin-top:45px;
-						margin-left:69px;
-						padding:3px 8px;
+						margin-top:0;
+						margin-left:72px;
+						padding:2px 7px;
 						position:absolute;
 						text-align:center;
 					}
