--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block step %}gravity-board{% endblock step %}
   {% block content %}
 
@@ -87,3 +88,8 @@
   </div>
 </div>
   {% endblock content %}
+
+{% block extra_js %}
+    <script src="{% static 'js/gravity_board.js' %}"></script>
+{% endblock extra_js %}
+
