Gravity board working with knockout-sortable

--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -128,6 +128,7 @@
     <script src="{% static 'js/jquery.gridly.js' %}"></script>
     <script src="{% static 'js/jquery-ui-1.10.4.min.js' %}"></script>
     <script src="{% static 'js/knockout-3.1.0.js' %}"></script>
+    <script src="{% static 'js/knockout-sortable.js' %}"></script>
 
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/pinch.js' %}"></script>
