--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -17,7 +17,7 @@
   +
 </button><h4 data-bind="text: name"></h4>
   					</div>
-  					<ul class="drag_list clearfix" data-bind="css: cssClass, foreach: ready.tickets">
+  					<ul class="drag_list clearfix" data-bind="css: cssClass, sortable: { data: ready.tickets }">
                         <li class="ticket"><div class="trash">x</div><span data-bind="text: text"/></li>
   					</ul>
   				</li>
@@ -33,7 +33,7 @@
                     <div class="task-header">
                         <h4 data-bind="text: name"></h4>
                     </div>
-                    <ul class="drag_list clearfix" data-bind="css: cssClass, foreach: doing.tickets">
+                    <ul class="drag_list clearfix" data-bind="css: cssClass, sortable: { data: doing.tickets }">
                         <li class="ticket"><div class="trash">x</div><span data-bind="text: text"/></li>
                     </ul>
                 </li>
@@ -49,7 +49,7 @@
                     <div class="task-header">
                         <h4 data-bind="text: name"></h4>
                     </div>
-                    <ul class="drag_list clearfix" data-bind="css: cssClass, foreach: doing.tickets">
+                    <ul class="drag_list clearfix" data-bind="css: cssClass, sortable: { data: done.tickets }">
                         <li class="ticket"><div class="trash">x</div><span data-bind="text: text"/></li>
                     </ul>
                 </li>
