--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -13,13 +13,31 @@
   			<ul class="task-columns" data-bind="foreach: workstreams">
   				<li>
   					<div class="task-header">
-  						<button class="btn btn-primary btn-lg add" data-toggle="modal" data-target="#myModal">
+  						<button class="btn btn-primary btn-lg add" data-toggle="modal" data-bind="attr: { 'data-target': '#' + cssClass() + 'Modal' }">
   +
 </button><h4 data-bind="text: name"></h4>
   					</div>
   					<ul class="drag_list clearfix" data-bind="css: cssClass, sortable: { data: ready.tickets }">
                         <li class="ticket"><div class="trash">x</div><span data-bind="text: text"/></li>
   					</ul>
+                    <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-bind="attr: { id: cssClass() + 'Modal' }">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                    <h4 class="modal-title" id="myModalLabel">Add a new ticket</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <input class="ticket-input" type="text" placeholder="New ticket name" data-bind="value: newTicket.text"/>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary save" data-dismiss="modal" data-bind="click: createNew">Add ticket</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
   				</li>
   			</ul>
       	</div>
