--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -132,14 +132,13 @@
     <script src="{% static 'js/pinch.js' %}"></script>
 
     {% block extra_js %}{% endblock extra_js %}
-{#    <script>#}
-{#      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){#}
-{#      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),#}
-{#      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)#}
-{#      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');#}
-{##}
-{#      ga('create', 'UA-50612155-1', 'pinch.tn');#}
-{#      ga('send', 'pageview');#}
-{#    </script>#}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-50612155-1', 'pinch.tn');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
