Adding social and HN links

--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -104,12 +104,14 @@
 
 	<div id="footer">
 	   <div class="container clearfix">
-		  <img src="/static/images/bahn5.png" align="left" height="60px"/>
+		  <a href="http://www.hacknashville.com/" target="_blank"><img src="/static/images/bahn5.png" align="left" height="60px"/></a>
 	      <p class="text-muted">
 			  <b>Built by Hackers, for Hackers.</b><br />
-			   Team: <em>Brendan Wovchko, Cale Mooth, 
-				  Jared Bunting, Jesse Gray, Kyle Williams, Mahesh Thundathil, 
-				  Matt Conrad, Matthew O'Briant, Taylor Schena
+			   Team: <em><a href="http://www.twitter.com/taylorrific" target="_blank">Taylor Schena</a>, <a href="http://www.twitter.com/CaleM" target="_blank">Cale Mooth</a>, 
+				  <a href="http://www.twitter.com/jwbunt" target="_blank">Jared Bunting</a>, <a href="http://www.twitter.com/ScrumMasterJ" target="_blank">Jesse Gray</a>, 
+				  <a href="http://www.twitter.com/kylewill" target="_blank">Kyle Williams</a>, <a href="https://www.linkedin.com/pub/mahesh-thundathil/37/747/bb3" target="_blank">Mahesh Thundathil</a>, 
+				  <a href="http://www.twitter.com/kizmat_konrad" target="_blank">Matt Conrad</a>, <a href="https://www.linkedin.com/pub/matthew-o-briant/75/914/72b" target="_blank">Matthew O'Briant</a>, and 
+				  <a href="http://www.twitter.com/wovchko" target="_blank">Brendan Wovchko</a>.
 			  </em><br />
 			  Based on the Methodology "Pinch" at <a href="http://www.startpinching.com" target="_blank">startpinching.com</a>
 		  </p>
