--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -102,7 +102,7 @@
 	  
     </div> <!-- /container -->
 
-	<div id="footer">
+	<div id="footer" class="hidden-xs">
 	   <div class="container clearfix">
 		  <a href="http://www.hacknashville.com/" target="_blank"><img src="/static/images/bahn5.png" align="left" height="60px"/></a>
 	      <p class="text-muted">
