Make pages (except gravity board) responsive.

--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -28,7 +28,9 @@
             <div class="form-group">
               <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Your great project name">
             </div>
-            <button type="submit" class="btn btn-default square">get started</button>
+            <div class="clearfix">
+              <button type="submit" class="btn btn-default square">get started</button>
+            </div>
           </form>
 
         </div>
