--- a/pinch/templates/breakdown_mvp.html
+++ b/pinch/templates/breakdown_mvp.html
@@ -23,9 +23,10 @@
                   <div class="codeholder">
                       <textarea id="highlight_statement">{{ project.mvp.statement }}</textarea>
                   </div>
-
-                  <button id="clear" type="button" class="btn btn-default">Clear</button>
-                  <button id="highlight_next" type="submit" class="btn btn-default">Next</button>
+                  <div class="clearfix">
+                    <button id="clear" type="button" class="btn btn-default">Clear</button>
+                    <button id="highlight_next" type="submit" class="btn btn-default">Next</button>
+                  </div>
               </form>
           </div>
 
