--- a/pinch/templates/create_mvp.html
+++ b/pinch/templates/create_mvp.html
@@ -28,7 +28,9 @@
                   <div class="form-group">
                       <textarea class="form-control" rows="3" name="original_statement" id="original_statement" placeholder="A user will be able to do this, and then that, and then finally end up here.">{{ project.mvp.original_statement }}</textarea>
                   </div>
-                  <button type="submit" class="btn btn-default">Next</button>
+                  <div class="clearfix">
+                    <button type="submit" class="btn btn-default">Next</button>
+                  </div>
               </form>
 
         </div>
