--- a/pinch/templates/minify_mvp.html
+++ b/pinch/templates/minify_mvp.html
@@ -30,9 +30,10 @@
                   <div class="codeholder">
                       <textarea id="strike_statement">{{ project.mvp.original_statement }}</textarea>
                   </div>
-
-                  <button id="clear" type="button" class="btn btn-default">Clear Edits</button>
-                  <button id="minify_next" type="submit" class="btn btn-default">Next</button>
+                  <div class="clearfix">
+                    <button id="clear" type="button" class="btn btn-default">Clear Edits</button>
+                    <button id="minify_next" type="submit" class="btn btn-default">Next</button>
+                  </div>
               </form>
           </div>
 
