--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -127,12 +127,18 @@
   position: absolute;
   text-align: center;
 }
+@media only screen and (max-width: 700px) {
+  /* line 94, sass/_gravity_board.scss */
+  #gravity-board .lane .task-columns > li {
+    display: block;
+  }
+}
 
-/* line 97, sass/_gravity_board.scss */
+/* line 100, sass/_gravity_board.scss */
 .modal-dialog {
   left: 0 !important;
 }
-/* line 99, sass/_gravity_board.scss */
+/* line 102, sass/_gravity_board.scss */
 .modal-dialog .ticket-input {
   font-size: 21px;
   padding: 10px 5px;
