--- a/pinch/templates/breakdown_mvp.html
+++ b/pinch/templates/breakdown_mvp.html
@@ -19,12 +19,12 @@
           <div class="col-md-8">
               <form id="main_form" role="form" method="post">
                   {% csrf_token %}
-                  <input type="hidden" name="workstreams" id="selections" value="{{ selectionJson }}">
+                  <input type="hidden" name="workstreams" id="selections" value="" data-bind="value: selectionsJson">
                   <div class="codeholder">
-                      <textarea id="highlight_statement">{{ project.mvp.statement }}</textarea>
+                      <textarea id="highlight_statement" data-bind="highlight: { data: selections, highlightClass: 'highlight' }">{{ project.mvp.statement }}</textarea>
                   </div>
                   <div class="clearfix">
-                    <button id="clear" type="button" class="btn btn-default">Clear</button>
+                    <button id="clear" type="button" class="btn btn-default" data-bind="click: clear">Clear</button>
                     <button id="highlight_next" type="submit" class="btn btn-default">Next</button>
                   </div>
               </form>
@@ -41,3 +41,17 @@
       </div>	  
 
   {% endblock content %}
+
+{% block extra_js %}
+    <script>
+        $(document).ready(function() {
+            var model = new HighlightModel();
+            {% for ws in project.mvp.workstream_set.all %}
+                model.selections.push({ line: {{ws.line}},
+                                        statement_start: {{ws.statement_start}},
+                                        statement_end: {{ws.statement_end}}});
+            {% endfor %}
+            ko.applyBindings(model);
+        });
+    </script>
+{% endblock extra_js %}
